[tool.poetry]
name = "python-token-server"
version = "0.1.0"
description = "A simple token server for Agora.io written with the Flask framework in Python"
authors = ["Samyak Jain <samtan106@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
